# figurative_apperception_engine

./: .gitignore  README.md
asp/: figurative_backbone.lp  figurative_constraints.lp  figurative_events.lp  figurative_judgements.lp  figurative_synthesis.lp  spatial_axioms.lp  spatial_synthesis.lp  temporal_axioms.lp
code/: CHANGELOG.md  FigurativeTemplates.hs  Interpretation.hs  figSolve.cabal  figsolve.hs
code/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
figurative_Apperception_Engine/: bird_interpretation.lp  change_interpretation.lp  coffeejob.job  figjob.job  input_bird.lp  input_change.lp  input_leftright.lp  input_leftright_6.lp  input_leftright_7.lp  input_leftright_9.lp  input_space.lp  input_space_simple.lp  output.txt  output_coffee.txt  space_interpretation.lp  spatial_synthesis.lp
temp/: space_change_init.lp  space_change_interpretation.lp  space_change_results.txt  space_change_script.sh  space_change_subs.lp  space_change_var_atoms.lp  space_leftright_interpretation.lp  space_leftright_results.txt  space_leftright_script.sh  space_leftright_subs.lp  space_leftright_var_atoms.lp  space_space_simple_init.lp  space_space_simple_interpretation.lp  space_space_simple_results.txt  space_space_simple_script.sh  time_coffee_init.lp  time_coffee_interpretation.lp  time_coffee_results.txt  time_coffee_script.sh  time_coffee_subs.lp  time_coffee_var_atoms.lp  time_simple_2_init.lp  time_simple_2_interpretation.lp  time_simple_2_results.txt  time_simple_2_script.sh  time_simple_init.lp  (+7 more)
(+6 files in other folders)
